Still working on it

--- a/index.html
+++ b/index.html
@@ -1,26 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Karol Liman</title>
-    <link href="https://fonts.googleapis.com/css?family=Poiret+One|Spartan:400,700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navigation">
-      <ul class="menu">
-        <li>home</li>
-        <li>about</li>
-        <li>contact</li>
-      </ul>
-    </nav>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <link rel="stylesheet" href="./styles.css">
+      <title>Karol Liman</title>
+      <link href="https://fonts.googleapis.com/css?family=Poiret+One|Spartan:400,700&display=swap" rel="stylesheet">
+    </head>
+    <body>
+      <nav class="navigation">
+        <ul class="menu">
+          <li>home</li>
+          <li>about</li>
+          <li>contact</li>
+        </ul>
+      </nav>
 
-<section class="introduction">
-  <div class="saying-hi">
-    <h1>Karol Liman</h1>
-    <h2>Best prograamer evah</h2>
-    <p>I am a student curently livivng in the Netherlands and this is my first portfolio website. It is going to be filled with mistakes, dumb and smelly code, but its fine, no one can run a marathon without training. Also I like making stuff out of garbage which is oe of my small set of skills. I like to think of myself as a crafty person but enough about me, take a look for yourself.</p>
+    <section class="introduction">
+      <div class="saying-hi">
+        <h1>Karol Liman</h1>
+        <h2>UX designer</h2>
+        <br>
+        <!-- <p>I am a student curently livivng in the Netherlands and this is my first portfolio website. It is going to be filled with mistakes, dumb and smelly code, but its fine, no one can run a marathon without training. Also I like making stuff out of garbage which is oe of my small set of skills. I like to think of myself as a crafty person but enough about me, take a look for yourself.</p> -->
+        <p> I am a student curently pursuing user experience design degree in The Netherlands. In this portfolio you can find my latest projects and if you like what you see, feel free to get in touch!
+      </div>
+      <div class="my-portrait">
+        <img src="./images/Karlosas.jpg" alt="Smoldering Karol">
+      </div>
+    </section>
+
+    <section class="work">
+      <div class="title">
+        <h2>My Projects</h2>
+      </div>
+      <a href="./Personalproductbox.html" class="work-link work-link-1">
+      <div class="work-item work-1">
+        <div class="project-describtion">
+          <h2>Personal product box</h2><br>
+          <p>Quick yet fun project showcasing my creativity and craftsmenship</p>
+        </div>
+        <div class="project-img-container">
+              <img src="./images/package.png" alt="package">
+        </div>
+      </div>
+    </a>
+    <a href="#" class="work-link work-link-2">
+    <div class="work-item work-2">
+      <div class="project-describtion">
+        <h2>Bespoke design:<br>Digital unwraping expirience</h2><br>
+        <p>Bespoke veri good veri nice Me LIKE this course project good teacher good, engagement also good, tenkju</p>
+      </div>
+      <div class="project-img-container">
+            <img src="./images/gift.png" alt="sample">
+      </div>
+    </div>
+  </a>
+  <a href="#" class="work-link work-link-3">
+  <div class="work-item work-3">
+    <div class="project-describtion">
+      <h2>Bespoke design</h2><br>
+      <p>Bespoke veri good veri nice Me LIKE this course project good teacher good, engagement also good, tenkju</p>
+    </div>
+    <div class="project-img-container">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTepb9upOyBX3p4ismGfZEunXypFkky7OmQgQ9UabBVF_yyfu7x" alt="sample">
+    </div>
   </div>
-  <div class="my-portrait">
-    <img src="./images/Karlosas.jpg" alt="Smoldering Karol">
+</a>
+<a href="#" class="work-link work-link-4">
+<div class="work-item work-4">
+  <div class="project-describtion">
+    <h2>Processing</h2><br>
+    <p>My path of learning processing and creating a few projects along the way</p>
   </div>
+  <div class="project-img-container">
+        <img src="./images/processinglogo.png" alt="processing_logo">
+  </div>
+</div>
+</a>
+  </section>
+
+  <footer>
+    <p>Lets get in touch</p>
+  </footer>
+</body>
+</html>
