--- a/Personalproductbox.html
+++ b/Personalproductbox.html
@@ -14,3 +14,30 @@
           <li>contact</li>
         </ul>
       </nav>
+
+    <section class="project-intro">
+      <div class="intro-text">
+        <h1>Personal product box</h1>
+        <br>
+        <P>During my first year of studies in the course "Online presence" we got an assingment to build a product box that we as desingners would sell ourselves in. The time we were given to complete the task was 1 hour and materials we could youse were presented by the teacher.</P>
+      </div>
+    </section>
+
+    <section class="product-box-body">
+      <div class="line">
+        <div class="body-text">
+          <p>After quick brainstorm I decided to go for something more interesting than just a box with my skills and advantages writen on it. The plan was to create something more dificult with methaphorycal meaning behind it that at the same time would showcase my creativity and craftsmenship.</p>
+        </div>
+        <div class="box-img-container">
+          <img src="./images/Horse1.jpg" alt="Cardboard-trojan-horse">
+        </div>
+      </div>
+      <div class="line">
+        <div class="box-img-container">
+          <img src="./images/Horse2.jpeg" alt="Cardboard-trojan-horse-chess">
+        </div>
+        <div class="body-text">
+          <p>I came up with the idea of creating a Trojan horse</p>
+        </div>
+      </div>
+    </section>
