Filling the page

--- a/Processing.html
+++ b/Processing.html
@@ -20,6 +20,51 @@
         <h1>Creative programing</h1>
         <h2>Using Processing</h2>
         <br>
-        <P>.</P>
+        <P>My first interaction with programing was in a course "Programing bootcamp" where we started learning creative programing with the platform "Processing". We had 5 days of the bootcamp in which we were learning a new skill every day and doing a small project after the lecture. In the evening we would present those projects and get feedback on our progress.</P>
+      </div>
+    </section>
+
+    <section class="prcessing-body">
+      <div class="line-processing">
+        <div class="processing-body-text">
+          <h2>Day one:</H2>
+            <P>The first day was relatively easy considering the fact that it was my first-time coding.
+              We have learned how to draw a line, rectangle, triangle, an ellipse and how to add a randomizing function, fill and stroke. After learning it was nice to at least have the basic understanding of how creative code is written.
+              When we got to the assignment which was to create a static image with at least one element which is random but at the same time similar – I wanted to create something recognizable and a little bit more difficult than a shape with randomly changing color. So, I decided to make a Christmas tree with randomly placed snowflakes around it. I also wanted to make the snowflakes size different. In addition, I made the color of the ground random shade of grey between a specific parameter.</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-img-container">
+          <img src="./images/tree1.png" alt="programed-tree">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/tree2.png" alt="programed-tree">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/tree3.png" alt="programed-tree">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/tree4.png" alt="programed-tree">
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+          <h2>Day two:</H2>
+            <P>I have learned how to create a moving image in other words how to create the loop that program is always running with the help of void draw command. Also, I have learned how to utilize if function which allowed me to create something more engaging.So, when the timecame to create my own game, I felt extremely incompetent. The game I created was easy and simple, a yellow dot which is the avatar of the game has to eat two green ellipses (broccolis) to vin the game. Also, after consumption the avatar increases size and after eating both broccolis a player is greeted with a victory screen.<br>After learning how to do this I felt wery inspired and wanted to create more.</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-img-container">
+          <img src="./images/game2.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/game3.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/game4.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/game5.png" alt="first-game">
+        </div>
       </div>
     </section>
