Working on a new page

--- a/Processing.html
+++ b/Processing.html
@@ -67,4 +67,65 @@
           <img src="./images/game5.png" alt="first-game">
         </div>
       </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+          <h2>Day three:</H2>
+            <P>On this day we have learned while and for loops. That helped us to "run" an action continuously, until a specific parameter or condition was met. This allowed us to create multiple repeating shapes or lines by only writing few lines of code instead of coding every individual object. At this point programing became fun again because I understood things and how to make them happen on the screen.
+            When it was time to make an interactive artwork I decided to make an illusion of a tunnel by drawing multiple increasing circles. The interactivnes of the art-work is changing center of the tube illusion. The mouse cursors placement on the screen was the center of the tube.</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-img-container">
+          <img src="./images/interactive1.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/interactive2.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/interactive3.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/interactive4.png" alt="first-game">
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+          <h2>Day four:</H2>
+            <P>On a day four we have learned how to use arrays. Learning arrays was quite fun and nice. They are useful when dealing with a lot of variables under the same name and allows the programmer to make a shorter and more manageable code.When it came time to do the project of the day which was a game, my idea was to create a frustrating game. I wanted to make hard to control avatar which moves across the screen faster than the user can notice. The goal of the game is to reach right side of the screen and avoid hidden obstacles that show themselves within close proximity of the avatar. When stepped on an obstacle it turns red and starts collecting anti points. The whole point of the game is to collect as les of them as possible. It was really fun working on a thing like that and I haven’t even noticed how the time passed. At this point I was surprised that I actually enjoy programing.</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-img-container">
+          <img src="./images/best1.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/best2.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/best3.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/best4.png" alt="first-game">
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+          <h2>Day five:</H2>
+            <P>On a day five we had to combine all the skills that we have learned and create something awesome. Some people made games, others made artworks and I have decided to work on an artwork myself. I was a little bit disappointed of my previous one, because it was too simple, and I have struggled to come up with an idea. So through the duration of the day I created a moving artwork that can be refreshed and set of in a different direction and can e colored with the help of a c button. I was happy with my work because the artwork resembled a logo.</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-img-container">
+          <img src="./images/pr1.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/pr2.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/pr3.png" alt="first-game">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/pr4.png" alt="first-game">
+        </div>
+      </div>
     </section>
