Created another page

--- a/Personalproductbox.html
+++ b/Personalproductbox.html
@@ -37,7 +37,7 @@
           <img src="./images/Horse2.jpeg" alt="Cardboard-trojan-horse-chess">
         </div>
         <div class="body-text">
-          <p>I came up with the idea of creating a Trojan horse</p>
+          <p>I came up with the idea of creating a Trojan horse which would represent me. The dangerous army inside capable of destroying cities perfectly portrays my skills and my ability to deal with any task given to me.</p>
         </div>
       </div>
     </section>
