--- a/bespoke.html
+++ b/bespoke.html
@@ -20,6 +20,100 @@
         <h1>Bespoke design:</h1>
         <h2>Digital unwraping expirience</h2>
         <br>
-        <P>My first interaction with programing was in a course "Programing bootcamp" where we started learning creative programing with the platform "Processing". We had 5 days of the bootcamp in which we were learning a new skill every day and doing a small project after the lecture. In the evening we would present those projects and get feedback on our progress.</P>
+        <P>In the course "Bespoke design" we were devided into design teams of two. The task was to create digital card personalsation tool and digital unwraping expirience. This was the first full project that we did in university.</P>
       </div>
     </section>
+
+    <section class="bespoke-body">
+      <div class="line">
+        <div class="body-text">
+          <p>The first step was to carry out the reaserch of two people. Me and my partner had a person each which we interviewed, observed and analysed. After doing the reasech each of us gathered the data and put it together into a user's persona. </p>
+        </div>
+        <div class="box-img-container">
+          <img src="./images/user.jpg" alt="UserPortrait">
+        </div>
+      </div>
+      <div class="line">
+        <div class="box-img-container">
+          <img src="./images/Persona.png" alt="UserPersona">
+        </div>
+        <div class="body-text">
+          <p>After creating user portraits of people we analyzed me and my design partner combined those portraits into users persona. We used this persona as a strating point for our design challange.</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+            <p>After bainstorming and a week of developing the idea we seteled on creating a card personalization tool that would allow users to create 3D monster shaped gift cards-pinjatas with a message inside that directs the receiver of the card to an online unwrapping expirience that is a game in which the user has to kill the same paper monster that hass been resurected in the digital world.</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+            <p>My part was to create digital unwraping expirience, so I decided to make a decision based game that is entertaining and fun. First of all I made a paper prototype of the game.</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-img-container">
+          <img src="./images/PP1.jpg" alt="paperPrototype">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/PP2.jpg" alt="paperPrototype">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/PP3.jpg" alt="paperPrototype">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/PP4.jpg" alt="paperPrototype">
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+            <p>After testing my paper protoype and correcting the storry of the game I mooved on drawing the game on paper. It took very long time but it was definetely worth it. After drawing it out I scaned it and started working on it through Adobe XD</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-img-container">
+          <img src="./images/bp1.jpg" alt="coloredDrawing">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/bp2.jpg" alt="coloredDrawing">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/bp3.jpg" alt="coloredDrawing">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/bp4.jpg" alt="coloredDrawing">
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+            <p>Using Adobe XD I created high-fi prototype of the monster hunter game and that was the final product of this project.</p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-img-container">
+          <img src="./images/bp1.jpg" alt="finalProduct">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/bp2.jpg" alt="finalProduct">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/bp3.jpg" alt="finalProduct">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/bp4.jpg" alt="finalProduct">
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-img-container">
+          <img src="./images/bp1.jpg" alt="finalProduct">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/bp2.jpg" alt="finalProduct">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/bp3.jpg" alt="finalProduct">
+        </div>
+        <div class="processing-img-container">
+          <img src="./images/bp4.jpg" alt="finalProduct">
+        </div>
+      </div>
