--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </a>
-    <a href="#" class="work-link work-link-2">
+    <a href="./bespoke.html" class="work-link work-link-2">
     <div class="work-item work-2">
       <div class="project-describtion">
         <h2>Bespoke design:<br>Digital unwraping expirience</h2><br>
@@ -54,18 +54,18 @@
       </div>
     </div>
   </a>
-  <a href="#" class="work-link work-link-3">
+  <a href="./designCreativity.html" class="work-link work-link-3">
   <div class="work-item work-3">
     <div class="project-describtion">
-      <h2>Bespoke design</h2><br>
-      <p>Bespoke veri good veri nice Me LIKE this course project good teacher good, engagement also good, tenkju</p>
+      <h2>Design and creativity</h2><br>
+      <p>Visual projects created during Design and creativity class created with newly learned creative techniques.</p>
     </div>
     <div class="project-img-container">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTepb9upOyBX3p4ismGfZEunXypFkky7OmQgQ9UabBVF_yyfu7x" alt="sample">
+          <img src="./images/think.png" alt="creativityLogo">
     </div>
   </div>
 </a>
-<a href="#" class="work-link work-link-4">
+<a href="Processing.html" class="work-link work-link-4">
 <div class="work-item work-4">
   <div class="project-describtion">
     <h2>Processing</h2><br>
