--- a/about.html
+++ b/about.html
@@ -9,8 +9,25 @@
     <body>
       <nav class="navigation">
         <ul class="menu">
-          <li>home</li>
-          <li>about</li>
-          <li>contact</li>
+          <li><a href="./index.html" class="nav-button">home</a></li>
+          <li><a href="./about.html" class="nav-button">about</a></li>
+          <li><a href="./info.html" class="nav-button">contact</a></li>
         </ul>
       </nav>
+
+      <section class="project-intro">
+        <div class="intro-text">
+          <h1>About me</h1>
+          <br><br>
+          <P>My name is Karol Liman and I am a creative person...<br><br><br>
+            To be more specific, I am a user experience design student who is looking for an intership for the next year. I am not going to talk too much about myself, I will let my work do it for me. So if you like what you see in this portfolio feel free to contact me whenever you'd like. </P>
+        </div>
+      </section>
+
+      <section class="project-intro">
+        <div class="intro-text">
+          <h1>Design and creativity</h1>
+          <br>
+          <P>In the course I have learned how to express myself visualy and what things to take into concideration when drawing and structuring a poster. Furthermore I have learned new creative techniques which were completely new for me.  </P>
+        </div>
+      </section>
