--- a/designCreativity.html
+++ b/designCreativity.html
@@ -9,9 +9,9 @@
     <body>
       <nav class="navigation">
         <ul class="menu">
-          <li>home</li>
-          <li>about</li>
-          <li>contact</li>
+          <li><a href="./index.html" class="nav-button">home</a></li>
+          <li><a href="./about.html" class="nav-button">about</a></li>
+          <li><a href="./info.html" class="nav-button">contact</a></li>
         </ul>
       </nav>
 
@@ -42,7 +42,7 @@
       </div>
       <div class="line">
         <div class="body-text">
-          <p>After quick brainstorm I decided to go for something more interesting than just a box with my skills and advantages writen on it. The plan was to create something more dificult with methaphorycal meaning behind it that at the same time would showcase my creativity and craftsmenship.</p>
+          <p>This assingment was an introduction to creative thinking technique caled how might we..(do something with the main idea). In this case the challange was to draw a few ideas of the question HMW spice up waiting time during travel? I decided to spice it up in the bad way and this is what I came up with.</p>
         </div>
         <div class="box-img-container">
           <img src="./images/dc3.jpg" alt="Cardboard-trojan-horse">
@@ -53,7 +53,15 @@
           <img src="./images/dc4.jpg" alt="Cardboard-trojan-horse-chess">
         </div>
         <div class="body-text">
-          <p>I came up with the idea of creating a Trojan horse which would represent me. The dangerous army inside capable of destroying cities perfectly portrays my skills and my ability to deal with any task given to me.</p>
+          <p>This assingment introduced me to another creative technique which forces you to exagurate your main idea. Initialy my idea was to create a digital drawing station and after I exagurated, it became a digital drawing room. Here you can see my visual depiction of this whole exaguration process.</p>
         </div>
       </div>
     </section>
+    <footer>
+      <ul class="ending">
+        <li>Email: Karolis9906@gmail.com</li>
+        <li>Phone number: 06 87865147</li>
+        <li>Facebook:<a href="https://www.facebook.com/profile.php?id=100004155556542">@Karol</a></li>
+      </ul>
+    </footer>
+  </html>
