--- a/Processing.html
+++ b/Processing.html
@@ -9,9 +9,9 @@
     <body>
       <nav class="navigation">
         <ul class="menu">
-          <li>home</li>
-          <li>about</li>
-          <li>contact</li>
+          <li><a href="./index.html" class="nav-button">home</a></li>
+          <li><a href="./about.html" class="nav-button">about</a></li>
+          <li><a href="./info.html" class="nav-button">contact</a></li>
         </ul>
       </nav>
 
@@ -129,3 +129,12 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <ul class="ending">
+        <li>Email: Karolis9906@gmail.com</li>
+        <li>Phone number: 06 87865147</li>
+        <li>Facebook:<a href="https://www.facebook.com/profile.php?id=100004155556542">@Karol</a></li>
+      </ul>
+    </footer>
+  </html>
