--- a/about.html
+++ b/about.html
@@ -24,10 +24,63 @@
         </div>
       </section>
 
-      <section class="project-intro">
-        <div class="intro-text">
-          <h1>Design and creativity</h1>
+    <section class="prcessing-body">
+      <div class="line-processing">
+        <div class="processing-body-text">
+          <h1>Work experience</h1>
           <br>
-          <P>In the course I have learned how to express myself visualy and what things to take into concideration when drawing and structuring a poster. Furthermore I have learned new creative techniques which were completely new for me.  </P>
+          <p>
+            2016/2017/2018 Ceramics Studio<br>
+            Job title: Salesman<br>
+            Ceramics salesman in fairs, festivals and art markets held in various Baltic countries. Main products were ceramic bird whistles made by a professional ceramic’s designer. During this job I had to use my sales skills in different languages: English, Lithuanian, Russian and Polish. Furthermore, I have learned how to work with large sums of money. <br><br>
+
+            2018/2019 Home fundraising<br>
+            Job title: Fundraiser<br>
+            I was working on a behalf of various charities such as British heart foundation, Royal national institute for blind people and Plan international. Job consisted of door to door visits in various towns of East Anglia. Working here I have learned how to quickly adapt my approach to different types of people and their moods. In addition, this job greatly improved my communication skills.<br><br>
+
+            2019 Restaurant “Wraperia Suppa Kebs”<br>
+            Job title: The cook<br>
+            My job consisted of vegetable preparation, meet grilling, assembling wraps, pitas and plates. Mainly it was preparing big amounts of fast food in a short period of time while still maintaining quality of the dish.<br><br>
+          </p>
         </div>
-      </section>
+      </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+          <h1>Education</h1>
+          <br>
+          <p>In 2018 I have finished Vilniaus Antakalnis gymnasium.<br>I am currently studying in<a href="https://www.thehagueuniversity.com/">The Hague University of Applied Sciences</a> User experience design course. </p>
+        </div>
+      </div>
+      <div class="line-processing">
+        <div class="processing-body-text">
+          <h2>Hobby: paper mache masks</H2>
+            <p>I love making paper mache masks. These are a few examples of what I like making.</p>
+        </div>
+      </div>
+    </div>
+    <div class="line-processing">
+      <div class="processing-img-container">
+        <img src="./images/ms1.jpg" alt="papaer-mask">
+      </div>
+      <div class="processing-img-container">
+        <img src="./images/ms22.png" alt="papaer-mask">
+      </div>
+      <div class="processing-img-container">
+        <img src="./images/ms3.png" alt="papaer-mask">
+      </div>
+      <div class="processing-img-container">
+        <img src="./images/ms4.png" alt="papaer-mask">
+      </div>
+    </div>
+    <div class="placeMe">
+      <a href="./index.html" class="nav-button">Home</a>
+    </div>
+    </section>
+    <footer>
+      <ul class="ending">
+        <li>Email: Karolis9906@gmail.com</li>
+        <li>Phone number: 06 87865147</li>
+        <li>Facebook:<a href="https://www.facebook.com/profile.php?id=100004155556542">@Karol</a></li>
+      </ul>
+    </footer>
+  </html>
