--- a/bespoke.html
+++ b/bespoke.html
@@ -18,16 +18,16 @@
     <section class="project-intro">
       <div class="intro-text">
         <h1>Bespoke design:</h1>
-        <h2>Digital unwraping expirience</h2>
+        <h2>Digital unwraping experience</h2>
         <br>
-        <P>In the course "Bespoke design" we were devided into design teams of two. The task was to create digital card personalsation tool and digital unwraping expirience. This was the first full project that we did in university.</P>
+        <P>In the course "Bespoke design" we were devided into design teams of two. The task was to create digital card personalisation tool and digital unwrapping experience. This was the first full project that we did in university.</P>
       </div>
     </section>
 
     <section class="bespoke-body">
       <div class="line">
         <div class="body-text">
-          <p>The first step was to carry out the reaserch of two people. Me and my partner had a person each which we interviewed, observed and analysed. After doing the reasech each of us gathered the data and put it together into a user's persona. </p>
+          <p>The first step was to carry out the research of two people. Me and my partner had a person each which we interviewed, observed and analysed. After doing the reasech each of us gathered the data and put it together into a user persona. </p>
         </div>
         <div class="box-img-container">
           <img src="./images/user.jpg" alt="UserPortrait">
@@ -38,17 +38,17 @@
           <img src="./images/Persona.png" alt="UserPersona">
         </div>
         <div class="body-text">
-          <p>After creating user portraits of people we analyzed me and my design partner combined those portraits into users persona. We used this persona as a strating point for our design challange.</p>
+          <p>After creating user portraits of people we analyzed me and my design partner combined those portraits into a persona. We used this persona as a starting point for our design challenge.</p>
         </div>
       </div>
       <div class="line-processing">
         <div class="processing-body-text">
-            <p>After bainstorming and a week of developing the idea we seteled on creating a card personalization tool that would allow users to create 3D monster shaped gift cards-pinjatas with a message inside that directs the receiver of the card to an online unwrapping expirience that is a game in which the user has to kill the same paper monster that hass been resurected in the digital world.</p>
+            <p>After bainstorming and a week of developing the idea we settled on creating a card personalization tool that would allow users to create 3D monster shaped gift cards-pinjatas with a message inside that directs the receiver of the card to an online unwrapping experience that is a game in which the user has to kill the same paper monster that has been resurrected in the digital world.</p>
         </div>
       </div>
       <div class="line-processing">
         <div class="processing-body-text">
-            <p>My part was to create digital unwraping expirience, so I decided to make a decision based game that is entertaining and fun. First of all I made a paper prototype of the game.</p>
+            <p>My part was to create digital unwrapping experience, so I decided to make a decision based game that is entertaining and fun. First of all I made a paper prototype of the game.</p>
         </div>
       </div>
       <div class="line-processing">
@@ -67,7 +67,7 @@
       </div>
       <div class="line-processing">
         <div class="processing-body-text">
-            <p>After testing my paper protoype and correcting the storry of the game I mooved on drawing the game on paper. It took very long time but it was definetely worth it. After drawing it out I scaned it and started working on it through Adobe XD</p>
+            <p>After testing my paper prototype and correcting the story of the game I moved on drawing the game on paper. It took very long time but it was definitely worth it. After drawing it out I scanned it and started working on it on Adobe XD.</p>
         </div>
       </div>
       <div class="line-processing">
@@ -86,38 +86,36 @@
       </div>
       <div class="line-processing">
         <div class="processing-body-text">
-            <p>Using Adobe XD I created high-fi prototype of the monster hunter game and that was the final product of this project.</p>
+            <p>Using Adobe XD I created hi-fi prototype of the "Monster hunter" game and that was the final product of this project.</p>
         </div>
       </div>
       <div class="line-processing">
         <div class="processing-img-container">
-          <img src="./images/bp1.jpg" alt="finalProduct">
+          <img src="./images/mg1.png" alt="finalProduct">
         </div>
         <div class="processing-img-container">
-          <img src="./images/bp2.jpg" alt="finalProduct">
+          <img src="./images/mg2.png" alt="finalProduct">
         </div>
         <div class="processing-img-container">
-          <img src="./images/bp3.jpg" alt="finalProduct">
+          <img src="./images/mg3.png" alt="finalProduct">
         </div>
         <div class="processing-img-container">
-          <img src="./images/bp4.jpg" alt="finalProduct">
+          <img src="./images/mg4.png" alt="finalProduct">
         </div>
       </div>
       <div class="line-processing">
         <div class="processing-img-container">
-          <img src="./images/bp1.jpg" alt="finalProduct">
+          <img src="./images/mg5.png" alt="finalProduct">
         </div>
         <div class="processing-img-container">
-          <img src="./images/bp2.jpg" alt="finalProduct">
-        </div>
-        <div class="processing-img-container">
-          <img src="./images/bp3.jpg" alt="finalProduct">
-        </div>
-        <div class="processing-img-container">
-          <img src="./images/bp4.jpg" alt="finalProduct">
+          <img src="./images/mg6.png" alt="finalProduct">
         </div>
       </div>
     </section>
+
+    <div class="placeMe">
+      <a href="./index.html" class="nav-button">Back</a>
+    </div>
 
     <footer>
       <ul class="ending">
