--- a/designCreativity.html
+++ b/designCreativity.html
@@ -19,14 +19,14 @@
       <div class="intro-text">
         <h1>Design and creativity</h1>
         <br>
-        <P>In the course I have learned how to express myself visualy and what things to take into concideration when drawing and structuring a poster. Furthermore I have learned new creative techniques which were completely new for me.  </P>
+        <P>In the course I have learned how to express myself visualy and what things to take into consideration when drawing and structuring a poster. Furthermore I have learned new creative techniques which were completely new for me.  </P>
       </div>
     </section>
 
     <section class="product-box-body">
       <div class="line">
         <div class="body-text">
-          <p>This was one of our first assingments for Design and creativity class. The challange was to draw the storry of my life. During this challange we learned how to structurise the content from most relevant to least relevant, furthermore, we have learned the most basic design rule 3-30-300.</p>
+          <p>This was one of our first assignments for Design and creativity class. The challenge was to draw the story of my life. During this challange we learned how to structurise the content from most relevant to least relevant, furthermore, we have learned the most basic design rule 3-30-300.</p>
         </div>
         <div class="box-img-container">
           <img src="./images/dc1.jpg" alt="Cardboard-trojan-horse">
@@ -37,12 +37,12 @@
           <img src="./images/dc2.jpg" alt="Cardboard-trojan-horse-chess">
         </div>
         <div class="body-text">
-          <p>This assingment was to make a poster of our trip to Austria in which we visited ars electronica festival of arts. This assingment helped me to further develop my skills of sketching and structurising information.</p>
+          <p>This assignment was to make a poster of our trip to Austria in which we visited Ars electronica festival. This assignment helped me to further develop my skills of sketching and structurising information.</p>
         </div>
       </div>
       <div class="line">
         <div class="body-text">
-          <p>This assingment was an introduction to creative thinking technique caled how might we..(do something with the main idea). In this case the challange was to draw a few ideas of the question HMW spice up waiting time during travel? I decided to spice it up in the bad way and this is what I came up with.</p>
+          <p>This assignment was an introduction to creative thinking technique called "How Might We". In this case the challange was to draw a few ideas of the question "HMW spice up waiting time during travel"? I decided to spice it up in the bad way and this is what I came up with.</p>
         </div>
         <div class="box-img-container">
           <img src="./images/dc3.jpg" alt="Cardboard-trojan-horse">
@@ -53,10 +53,15 @@
           <img src="./images/dc4.jpg" alt="Cardboard-trojan-horse-chess">
         </div>
         <div class="body-text">
-          <p>This assingment introduced me to another creative technique which forces you to exagurate your main idea. Initialy my idea was to create a digital drawing station and after I exagurated, it became a digital drawing room. Here you can see my visual depiction of this whole exaguration process.</p>
+          <p>This assignment introduced me to another creative technique which forces you to exagerate your main idea. Initialy my idea was to create a digital drawing station and after I exagerated, it became a digital drawing room. Here you can see my visual depiction of this whole exageration process.</p>
         </div>
       </div>
     </section>
+
+    <div class="placeMe">
+      <a href="./index.html" class="nav-button">Back</a>
+    </div>
+
     <footer>
       <ul class="ending">
         <li>Email: Karolis9906@gmail.com</li>
