--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <a href="./bespoke.html" class="work-link work-link-2">
     <div class="work-item work-2">
       <div class="project-describtion">
-        <h2>Bespoke design:<br>Digital unwraping expirience</h2><br>
-        <p>Bespoke veri good veri nice Me LIKE this course project good teacher good, engagement also good, tenkju</p>
+        <h2>Bespoke design:<br>Digital unwrapping experience</h2><br>
+        <p>First real life simulating project which thaught me the complexity of putting together reaserch and design thinking process. </p>
       </div>
       <div class="project-img-container">
             <img src="./images/gift.png" alt="sample">
@@ -58,7 +58,7 @@
   <div class="work-item work-3">
     <div class="project-describtion">
       <h2>Design and creativity</h2><br>
-      <p>Visual projects created during Design and creativity class created with newly learned creative techniques.</p>
+      <p>Visual projects made during Design and creativity class created with newly learned creative techniques.</p>
     </div>
     <div class="project-img-container">
           <img src="./images/think.png" alt="creativityLogo">
@@ -69,7 +69,7 @@
 <div class="work-item work-4">
   <div class="project-describtion">
     <h2>Processing</h2><br>
-    <p>My path of learning processing and creating a few projects along the way</p>
+    <p>My path of learning processing and creating a few projects along the way.</p>
   </div>
   <div class="project-img-container">
         <img src="./images/processinglogo.png" alt="processing_logo">
