--- a/info.html
+++ b/info.html
@@ -17,9 +17,9 @@
 
       <section class="block">
         <div class="intro-text">
-          <h1>Lets get in touch!</h1><br><br>
+          <h1>Let's get in touch!</h1><br><br>
           <h3>Email:</h3><br>
-          <h4>Karolis990@gmail.com</h4><br><br>
+          <h4>Karolis9906@gmail.com</h4><br><br>
           <h3>Phone number:</h3><br>
           <h4>06 87865147</h4><br><br>
           <h3>Facebook:</h3><br>
